--- a/index.html
+++ b/index.html
@@ -38,104 +38,90 @@
     </header>
 
     <hr />
-    <div class="carrusel-container">
-      <!--- PRIMER ITEM DEL CARRUSEL -->
 
-      <div class="carrusel-item">
-        <h1>¿Quienes somos?</h1>
-        <p>
-          Bienvenido a Bryce SIM Racing, tu destino para experimentar la emoción
-          del automovilismo desde la comodidad de tu hogar. Nos enorgullecemos
-          de ofrecer las soluciones más avanzadas en el mundo del SIM racing. En
-          Bryce SIM Racing, llevamos la pasión por las carreras al siguiente
-          nivel, proporcionando equipos de alta calidad que te sumergen por
-          completo en la adrenalina de las pistas virtuales. Nuestras SIM racing
-          boxes están diseñadas meticulosamente para ofrecer una experiencia
-          inmersiva, utilizando tecnología de vanguardia para recrear de manera
-          auténtica la emoción y la precisión de la competición automovilística.
-          Ya seas un entusiasta experimentado o un novato ansioso por adentrarte
-          en el mundo del SIM racing tenemos la solución perfecta para ti. Desde
-          equipos completos hasta componentes individuales ofrecemos una amplia
-          gama de productos adaptados a tus necesidades y presupuesto. Nuestro
-          compromiso no se detiene en ofrecer productos excepcionales; también
-          brindamos asesoramiento experto y soporte técnico continuo para
-          garantizar que tu experiencia de SIM racing sea incomparable. Descubre
-          la emoción, la velocidad y la precisión con Bryce SIM Racing. Únete a
-          nosotros en este emocionante viaje hacia el mundo del automovilismo
-          virtual y experimenta la sensación de estar al volante ¡sin salir de
-          casa! ¡Bienvenido a la emoción de las carreras virtuales con Bryce SIM
-          Racing!
-        </p>
-      </div>
+    <h1>¿Quienes somos?</h1>
+    <p>
+      Bienvenido a Bryce SIM Racing, tu destino para experimentar la emoción del
+      automovilismo desde la comodidad de tu hogar. Nos enorgullecemos de
+      ofrecer las soluciones más avanzadas en el mundo del SIM racing. En Bryce
+      SIM Racing, llevamos la pasión por las carreras al siguiente nivel,
+      proporcionando equipos de alta calidad que te sumergen por completo en la
+      adrenalina de las pistas virtuales. Nuestras SIM racing boxes están
+      diseñadas meticulosamente para ofrecer una experiencia inmersiva,
+      utilizando tecnología de vanguardia para recrear de manera auténtica la
+      emoción y la precisión de la competición automovilística. Ya seas un
+      entusiasta experimentado o un novato ansioso por adentrarte en el mundo
+      del SIM racing tenemos la solución perfecta para ti. Desde equipos
+      completos hasta componentes individuales ofrecemos una amplia gama de
+      productos adaptados a tus necesidades y presupuesto. Nuestro compromiso no
+      se detiene en ofrecer productos excepcionales; también brindamos
+      asesoramiento experto y soporte técnico continuo para garantizar que tu
+      experiencia de SIM racing sea incomparable. Descubre la emoción, la
+      velocidad y la precisión con Bryce SIM Racing. Únete a nosotros en este
+      emocionante viaje hacia el mundo del automovilismo virtual y experimenta
+      la sensación de estar al volante ¡sin salir de casa! ¡Bienvenido a la
+      emoción de las carreras virtuales con Bryce SIM Racing!
+    </p>
 
-      <!--- SEGUNDO ITEM DEL CARRUSEL -->
+    <h2>Pero, ¿qué es el Sim Racing?</h2>
+    <p>
+      El simracing es una disciplina del deporte automovilístico que consiste en
+      competir en carreras de coches a través de simuladores de conducción. El
+      objetivo del simracing es lograr la mayor fidelidad y realismo posible en
+      la experiencia de conducción, a través de una combinación de hardware y
+      software de alta calidad. Los coches utilizados en las competiciones de
+      simracing pueden ser desde recreaciones de coches de competición de
+      cualquiera de las diferentes disciplinas de automoción, hasta
+      modificaciones virtuales que realizan los pilotos de simulación, también
+      llamados Simracers, para conseguir una personalización exclusiva de su
+      coche en cuestión. Normalmente, los Simracers suelen tener su propia
+      estructura de simulación donde tener ubicados sus volantes y pedales, los
+      llamados Simracing Cockpit.
+    </p>
 
-      <div class="carrusel-item">
-        <h2>Pero, ¿qué es el Sim Racing?</h2>
-        <p>
-          El simracing es una disciplina del deporte automovilístico que
-          consiste en competir en carreras de coches a través de simuladores de
-          conducción. El objetivo del simracing es lograr la mayor fidelidad y
-          realismo posible en la experiencia de conducción, a través de una
-          combinación de hardware y software de alta calidad. Los coches
-          utilizados en las competiciones de simracing pueden ser desde
-          recreaciones de coches de competición de cualquiera de las diferentes
-          disciplinas de automoción, hasta modificaciones virtuales que realizan
-          los pilotos de simulación, también llamados Simracers, para conseguir
-          una personalización exclusiva de su coche en cuestión. Normalmente,
-          los Simracers suelen tener su propia estructura de simulación donde
-          tener ubicados sus volantes y pedales, los llamados Simracing Cockpit.
-        </p>
-      </div>
+    <h2>Vale, pero, ¿y por qué una SIM Racing box?</h2>
+    <p>
+      Una Sim Racing Box puede ser una adición fantástica para mejorar tu
+      experiencia de simulación de carreras. Aquí te dejo algunas razones por
+      las que podría valer la pena tener una:
+    </p>
+    <ol>
+      <li>
+        Realismo y experiencia inmersiva: Las Sim Racing Boxes suelen ofrecer
+        una experiencia más inmersiva al proporcionar controles físicos, como
+        volantes, pedales y palancas de cambios, que simulan mejor la sensación
+        de conducir un automóvil real.
+      </li>
 
-      <!--- TERCER ITEM DEL CARRUSEL -->
+      <li>
+        Mejora en el rendimiento: Al utilizar hardware especializado, puedes
+        mejorar tu rendimiento en comparación con el teclado o un controlador
+        estándar. Esto puede traducirse en tiempos de vuelta más rápidos y una
+        conducción más precisa.
+      </li>
 
-      <div class="carrusel-item">
-        <h2>Vale, pero, ¿y por qué una SIM Racing box?</h2>
-        <p>
-          Una Sim Racing Box puede ser una adición fantástica para mejorar tu
-          experiencia de simulación de carreras. Aquí te dejo algunas razones
-          por las que podría valer la pena tener una:
-        </p>
-        <ol>
-          <li>
-            Realismo y experiencia inmersiva: Las Sim Racing Boxes suelen
-            ofrecer una experiencia más inmersiva al proporcionar controles
-            físicos, como volantes, pedales y palancas de cambios, que simulan
-            mejor la sensación de conducir un automóvil real.
-          </li>
+      <li>
+        Personalización y comodidad: Puedes personalizar tu configuración de Sim
+        Racing Box según tus preferencias. Desde ajustes de sensibilidad hasta
+        la disposición física de los controles, puedes adaptarlo para que se
+        ajuste perfectamente a tu estilo de conducción y comodidad.
+      </li>
 
-          <li>
-            Mejora en el rendimiento: Al utilizar hardware especializado, puedes
-            mejorar tu rendimiento en comparación con el teclado o un
-            controlador estándar. Esto puede traducirse en tiempos de vuelta más
-            rápidos y una conducción más precisa.
-          </li>
+      <li>
+        Entrenamiento y práctica: Para aquellos interesados en mejorar sus
+        habilidades de conducción, una Sim Racing Box puede ser una herramienta
+        excelente para practicar sin los riesgos asociados con la conducción
+        real en pistas o carreteras.
+      </li>
 
-          <li>
-            Personalización y comodidad: Puedes personalizar tu configuración de
-            Sim Racing Box según tus preferencias. Desde ajustes de sensibilidad
-            hasta la disposición física de los controles, puedes adaptarlo para
-            que se ajuste perfectamente a tu estilo de conducción y comodidad.
-          </li>
-
-          <li>
-            Entrenamiento y práctica: Para aquellos interesados en mejorar sus
-            habilidades de conducción, una Sim Racing Box puede ser una
-            herramienta excelente para practicar sin los riesgos asociados con
-            la conducción real en pistas o carreteras.
-          </li>
-
-          <li>
-            Comunidad y competición: Muchas personas disfrutan participando en
-            eventos de Sim Racing, ya sea compitiendo en línea o uniéndose a
-            ligas y torneos locales o globales. Tener una Sim Racing Box te
-            permite sumergirte más en esta comunidad y participar en
-            competiciones emocionantes.
-          </li>
-        </ol>
-      </div>
-    </div>
+      <li>
+        Comunidad y competición: Muchas personas disfrutan participando en
+        eventos de Sim Racing, ya sea compitiendo en línea o uniéndose a ligas y
+        torneos locales o globales. Tener una Sim Racing Box te permite
+        sumergirte más en esta comunidad y participar en competiciones
+        emocionantes.
+      </li>
+    </ol>
 
     <hr />
 
