he ajustado los divs principales y puesto un nuevo fondo de background

--- a/index.html
+++ b/index.html
@@ -51,42 +51,47 @@
           de ofrecer las soluciones más avanzadas en el mundo del SIM racing. En
           Bryce SIM Racing, llevamos la pasión por las carreras al siguiente
           nivel, proporcionando equipos de alta calidad que te sumergen por
-          completo en la adrenalina de las pistas virtuales. Nuestras SIM racing
-          boxes están diseñadas meticulosamente para ofrecer una experiencia
-          inmersiva, utilizando tecnología de vanguardia para recrear de manera
-          auténtica la emoción y la precisión de la competición automovilística.
-          Ya seas un entusiasta experimentado o un novato ansioso por adentrarte
-          en el mundo del SIM racing tenemos la solución perfecta para ti. Desde
-          equipos completos hasta componentes individuales ofrecemos una amplia
-          gama de productos adaptados a tus necesidades y presupuesto. Nuestro
-          compromiso no se detiene en ofrecer productos excepcionales; también
-          brindamos asesoramiento experto y soporte técnico continuo para
-          garantizar que tu experiencia de SIM racing sea incomparable. Descubre
-          la emoción, la velocidad y la precisión con Bryce SIM Racing. Únete a
-          nosotros en este emocionante viaje hacia el mundo del automovilismo
-          virtual y experimenta la sensación de estar al volante ¡sin salir de
-          casa! ¡Bienvenido a la emoción de las carreras virtuales con Bryce SIM
-          Racing!
+          completo en la adrenalina de las pistas virtuales. <br />
+          <br />
+          Nuestras SIM racing boxes están diseñadas meticulosamente para ofrecer
+          una experiencia inmersiva, utilizando tecnología de vanguardia para
+          recrear de manera auténtica la emoción y la precisión de la
+          competición automovilística. Ya seas un entusiasta experimentado o un
+          novato ansioso por adentrarte en el mundo del SIM racing tenemos la
+          solución perfecta para ti. Desde equipos completos hasta componentes
+          individuales ofrecemos una amplia gama de productos adaptados a tus
+          necesidades y presupuesto. <br />
+          <br />
+          Nuestro compromiso no se detiene en ofrecer productos excepcionales;
+          también brindamos asesoramiento experto y soporte técnico continuo
+          para garantizar que tu experiencia de SIM racing sea incomparable.
+          Descubre la emoción, la velocidad y la precisión con Bryce SIM Racing.
+          Únete a nosotros en este emocionante viaje hacia el mundo del
+          automovilismo virtual y experimenta la sensación de estar al volante
+          ¡sin salir de casa! ¡Bienvenido a la emoción de las carreras virtuales
+          con Bryce SIM Racing!
         </p>
       </div>
 
       <!-- QUE ES EL SIM RACING -->
 
       <div class="racing">
-        <h2>Pero, ¿qué es el Sim Racing?</h2>
+        <h1>Pero, ¿qué es el Sim Racing?</h1>
         <p>
           El simracing es una disciplina del deporte automovilístico que
           consiste en competir en carreras de coches a través de simuladores de
           conducción. El objetivo del simracing es lograr la mayor fidelidad y
           realismo posible en la experiencia de conducción, a través de una
-          combinación de hardware y software de alta calidad. Los coches
-          utilizados en las competiciones de simracing pueden ser desde
-          recreaciones de coches de competición de cualquiera de las diferentes
-          disciplinas de automoción, hasta modificaciones virtuales que realizan
-          los pilotos de simulación, también llamados Simracers, para conseguir
-          una personalización exclusiva de su coche en cuestión. Normalmente,
-          los Simracers suelen tener su propia estructura de simulación donde
-          tener ubicados sus volantes y pedales, los llamados Simracing Cockpit.
+          combinación de hardware y software de alta calidad. <br />
+          <br />
+          Los coches utilizados en las competiciones de simracing pueden ser
+          desde recreaciones de coches de competición de cualquiera de las
+          diferentes disciplinas de automoción, hasta modificaciones virtuales
+          que realizan los pilotos de simulación, también llamados Simracers,
+          para conseguir una personalización exclusiva de su coche en cuestión.
+          Normalmente, los Simracers suelen tener su propia estructura de
+          simulación donde tener ubicados sus volantes y pedales, los llamados
+          Simracing Cockpit.
         </p>
       </div>
     </div>
