Mejore la readibilidad del codigo css para mejorar el mantenimiento del sitio, tambien agregue un par de lineas de codigo para mejorar el display del css

--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../CSS/temas.css" />
     <link rel="stylesheet" href="../CSS/estados.css" />
   </head>
-  <body background="../Imagenes/f1.jpg" text="white" vlink="white">
+  <body>
     <center>
       <h2>
         Ayudanos a escoger el modelo que mejor se adecue a tus necesidades.
