--- a/HTML/nuestrosProductos.html
+++ b/HTML/nuestrosProductos.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../CSS/temas.css" />
     <link rel="stylesheet" href="../CSS/estados.css" />
   </head>
-  <body text="white" vlink="white" link="white">
+  <body>
     <h1>Nuestros modelos de Cajas SIM Racing</h1>
 
     <header>
