--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./CSS/modulos.css" />
     <link rel="stylesheet" href="./CSS/temas.css" />
   </head>
-  <body vlink="white" text="white" link="white">
+  <body>
     <!----->
     <h1 id="titulo">
       Si estás buscando una SIM Racing Box estás en el sitio adecuado.
