Añadi el footer a index

--- a/index.html
+++ b/index.html
@@ -145,12 +145,14 @@
     </div>
     <hr />
 
-    <h2>Seguro que te hemos convencido.</h2>
-    <h3>
-      Ahora permítenos mostrarte nuestros
-      <a href="HTML/nuestrosProductos.html">productos</a>
-    </h3>
+    <!-- FOOTER -->
 
-    <hr />
+    <footer>
+      <p>
+        Seguro que te hemos convencido. <br />Ahora permítenos mostrarte
+        nuestros
+        <a href="HTML/nuestrosProductos.html">productos</a>
+      </p>
+    </footer>
   </body>
 </html>
