Mejora general - mejora del formulario

--- a/HTML/nuestrosProductos.html
+++ b/HTML/nuestrosProductos.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../CSS/estados.css" />
   </head>
   <body>
-    <h1>Nuestros modelos de Cajas SIM Racing</h1>
+    <h1 id="titulo">Nuestros modelos de Cajas SIM Racing</h1>
 
     <header>
       <nav>
