--- a/HTML/ubicacion.html
+++ b/HTML/ubicacion.html
@@ -11,29 +11,39 @@
     <link rel="stylesheet" href="../CSS/estados.css" />
   </head>
   <body>
-    <h2>Nuestra ubicación.</h2>
-    <nav>
-      <ul>
-        <a href="../index.html">Inicio</a>
-
-        <a href="nuestrosProductos.html">Nuestros Productos</a>
-        <a href="https://brycesimracing.blogspot.com/" target="_blank">Blog</a>
-        <a href="contacto.html">¡Contactanos!</a>
-        <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-        <a href="https://www.linkedin.com/" target="_blank">Linkedin</a>
-      </ul>
-    </nav>
+    <h1 id="titulo">Nuestra ubicación.</h1>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="nuestrosProductos.html">Nuestros Productos</a></li>
+          <li>
+            <a href="https://brycesimracing.blogspot.com/" target="_blank"
+              >Blog</a
+            >
+          </li>
+          <li><a href="contacto.html">¡Contactanos!</a></li>
+          <li>
+            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/" target="_blank">Linkedin</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <hr />
     <br />
     <iframe
+      id="mapa"
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3178.337081594518!2d-3.6189490253442838!3d37.19222234550542!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd71fcf9589cae9d%3A0xd64971351144a933!2sIES%20Francisco%20Ayala!5e0!3m2!1ses!2ses!4v1701675214459!5m2!1ses!2ses"
-      width="600"
-      height="450"
-      style="border: 0"
-      allowfullscreen=""
       loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade"
+      allowfullscreen
     >
     </iframe>
-    <h3>¡Visítanos!</h3>
+
+    <hr />
+
+    <footer><p>¡Visítanos!</p></footer>
   </body>
 </html>
