--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -11,81 +11,97 @@
     <link rel="stylesheet" href="../CSS/estados.css" />
   </head>
   <body>
-    <center>
-      <h2>
-        Ayudanos a escoger el modelo que mejor se adecue a tus necesidades.
-      </h2>
-      <center>
-        <nav>
-          <ul>
-            <a href="../index.html">Inicio</a>
+    <h1 id="titulo">
+      Ayudanos a escoger el modelo que mejor se adecue a tus necesidades.
+    </h1>
 
-            <a href="nuestrosProductos.html">Nuestros Productos</a>
-            <a href="ubicacion.html">Dónde estamos</a>
+    <!-- HEADER -->
+
+    <header>
+      <nav>
+        <ul>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="nuestrosProductos.html">Nuestros Productos</a></li>
+          <li><a href="ubicacion.html">Dónde estamos</a></li>
+          <li>
             <a href="https://brycesimracing.blogspot.com/" target="_blank"
               >Blog</a
             >
+          </li>
+          <li>
             <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+          </li>
+          <li>
             <a href="https://www.linkedin.com/" target="_blank">Linkedin</a>
-          </ul>
-        </nav>
-      </center>
-      <fieldset>
-        <center>
-          <legend>
-            Tan solo necesitamos unos pocos datos para asegurarnos de que
-            tendras el mejor producto. ;) <br />
-            <br />
-          </legend>
-          <form action="">
-            Dinos que tipo de uso le daras al Racing SIM.
-            <br />
-            <textarea
-              placeholder="Gaming - Desarrollo de Software - etc. ¡Las opciones son muchas!"
-              id=""
-              cols="50"
-              rows="7"
-            ></textarea>
-            <br />
-            <br />
-            También necesitamos un poco de información respecto a tu
-            <strike>aparato computacional</strike> ordenador. :D <br />
-            Memoria RAM. <input type="checkbox" />8 GB
-            <input type="checkbox" name="" id="" />16 GB
-            <input type="checkbox" name="" id="" />32 GB o más. <br />
-            <br />
-            ¿Tienes una memoria gráfica? <br />
-            <input type="checkbox" name="" id="" />Si. ¿Podrías darnos algunos
-            detalles más?
-            <input type="text" placeholder="Especificaciones..." />
-            <br />
-            <input type="checkbox" name="" id="" /> No tengo :(
-            <br />
-            <br />
-            Ya casi acabamos, ahora solo necesitamos que nos digas que juego
-            sueles usar con más frecuencia. <br />
-            En caso de que la caja no vaya a ser destinada a juegos tan solo
-            coloca la opción más lógica. ;)
-            <br />
-            <input type="checkbox" /> F1 <input type="checkbox" /> Gran Turismo
-            <input type="checkbox" /> Forza MotorSport
-            <input type="checkbox" /> Yo no juego.
-            <br />
-            <br />
-            Ahora si, para acabar tan solo necesitamos tu correo electrónico.
-            <br />
-            <input type="email" name="" id="" placeholder="user@example.com" />
-            <br /><br />
-            ¿Todo correcto? Pues entonces... <br />
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <hr />
 
-            <input type="submit" name="" id="" />
-          </form>
-        </center>
-      </fieldset>
-      <h4>
+    <!-- FIELD SET -->
+    <fieldset id="fieldset">
+      <!-- LEGEND -->
+      <legend id="legend">
+        Tan solo necesitamos unos pocos datos para asegurarnos de que tendras el
+        mejor producto.
+      </legend>
+
+      <!-- FORMULARIO -->
+      <form action="">
+        Dinos que tipo de uso le daras al Racing SIM.
+        <br />
+        <textarea
+          id="textarea"
+          placeholder="Gaming - Desarrollo de Software - etc. ¡Las opciones son muchas!"
+        ></textarea>
+        <br />
+        <br />
+        También necesitamos un poco de información respecto a tu ordenador.
+        Memoria RAM. <br />
+        <input type="checkbox" />8 GB <input type="checkbox" name="" id="" />16
+        GB <input type="checkbox" name="" id="" />32 GB o más. <br />
+        <br />
+        ¿Tienes una memoria gráfica? <br />
+        <input type="checkbox" name="" id="" />Si. ¿Podrías darnos algunos
+        detalles más?
+        <input type="text" placeholder="Especificaciones..." />
+        <br />
+        <input type="checkbox" name="" id="" /> No tengo :(
+        <br />
+        <br />
+        Ya casi acabamos, ahora solo necesitamos que nos digas que juego sueles
+        usar con más frecuencia. <br />
+        En caso de que la caja no vaya a ser destinada a juegos tan solo coloca
+        la opción más lógica. ;)
+        <br />
+        <input type="checkbox" /> F1 <input type="checkbox" /> Gran Turismo
+        <input type="checkbox" /> Forza MotorSport <input type="checkbox" /> Yo
+        no juego.
+        <br />
+        <br />
+        Ahora si, para acabar tan solo necesitamos tu correo electrónico.
+        <br />
+        <input
+          type="email"
+          name=""
+          id="correo"
+          placeholder="user@example.com"
+        />
+        <br /><br />
+        ¿Todo correcto? Pues entonces... <br />
+        <input type="submit" name="" id="" />
+      </form>
+    </fieldset>
+
+    <hr />
+
+    <!--- FOOTER -->
+    <footer>
+      <p>
         ¡No te vayas aún! Vuelve a la
         <a href="../index.html">página principal.</a>
-      </h4>
-    </center>
+      </p>
+    </footer>
   </body>
 </html>
