--- a/HTML/nuestrosProductos.html
+++ b/HTML/nuestrosProductos.html
@@ -46,7 +46,7 @@
             Nuestro modelo Insignia. <br />
             Diseñado para adaptarte al mundo del SIM Racing de la mejor manera.
           </p>
-          <p>
+          <p class="pcarrusel">
             ¿Te gusta?
             <a href="https://www.ebay.es/" target="_blank">Llevatelo.</a>
           </p>
@@ -64,7 +64,7 @@
             Este modelo es ideal para llevar al siguiente paso tu juego y
             mejorar tus habilidades racing.
           </p>
-          <p>
+          <p class="pcarrusel">
             ¿Te gusta?
             <a href="https://www.ebay.es/" target="_blank">Llevatelo.</a>
           </p>
@@ -86,7 +86,7 @@
             para asergurarte de tener a la mano todas las <br />
             herramientas para posicionarte como el mejor corredor de SIM Racing.
           </p>
-          <p>
+          <p class="pcarrusel">
             ¿Te gusta?
             <a href="https://www.ebay.es/" target="_blank">Solicítalo.</a>
           </p>
