--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bienvenido</title>
-    <link rel="stylesheet" href="/CSS/basicas.css" />
+    <link rel="stylesheet" href="./CSS/basicas.css" />
     <link rel="stylesheet" href="./CSS/estados.css" />
     <link rel="stylesheet" href="./CSS/layout.css" />
     <link rel="stylesheet" href="./CSS/modulos.css" />
